--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_icons
-description: Customizable Icons for Flutter，you can use with over 3K+ icons in your flutter project
+description: Customizable Icons for Flutter.you can use with over 3K+ icons in your flutter project
 version: 2.0.0
 homepage: https://github.com/flutter-studio/flutter-icons
 
